// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden: korpus benchmarku — filtr types (tylko strukturalne) 1`] = `
{
  "neg-01": "Zgodnie z art. 123 456 789 nie stosuje się przepisów przejściowych.",
  "neg-02": "Podstawą roszczenia jest art. 415 KC.",
  "neg-03": "Oskarżono go z art. 148 § 1 Kodeksu karnego.",
  "neg-04": "Zastosowanie ma ust. 2 pkt 3 lit. b.",
  "neg-05": "Rozporządzenie opublikowano w Dz.U. z 2023 r. poz. 1234.",
  "neg-06": "Przepis § 7 regulaminu pozostaje w mocy.",
  "neg-07": "Zakres art. 10-100 obejmuje przepisy ogólne.",
  "neg-08": "Wyrok w sprawie II K 123/45 uprawomocnił się.",
  "neg-09": "Apelację oddalono w sprawie I ACa 1234/22.",
  "neg-10": "Sąd Najwyższy oddalił skargę kasacyjną.",
  "neg-11": "Trybunał Konstytucyjny odroczył ogłoszenie wyroku.",
  "neg-12": "Nowelizacja Kodeksu Cywilnego weszła w życie w maju.",
  "neg-13": "Urząd Skarbowy wezwał spółkę do korekty deklaracji.",
  "neg-14": "Ministerstwo Sprawiedliwości opublikowało projekt ustawy.",
  "neg-15": "Zakład Ubezpieczeń Społecznych wydał decyzję odmowną.",
  "neg-16": "Naczelny Sąd Administracyjny uchylił zaskarżony wyrok.",
  "neg-17": "Skierowano pytanie do Izby Cywilnej Sądu Najwyższego.",
  "neg-18": "Prokuratura Okręgowa w Warszawie umorzyła śledztwo.",
  "neg-19": "Rzecznik Praw Obywatelskich zabrał głos w debacie.",
  "neg-20": "Wilk biegał po lesie za sarną.",
  "neg-21": "Lis przemknął przez drogę tuż przed autem.",
  "neg-22": "Baran to pierwszy znak zodiaku.",
  "neg-23": "Mazurek wielkanocny stygł na parapecie.",
  "neg-24": "Sowa hukała całą noc pod oknem.",
  "neg-25": "Kruk krukowi oka nie wykole, jak mówi przysłowie.",
  "neg-26": "Dudek to ptak o charakterystycznym czubie.",
  "neg-27": "Kot przewrócił doniczkę z parapetu.",
  "neg-28": "W piątek trzynastego lepiej zostać w domu.",
  "neg-29": "Kwiecień plecień, bo przeplata trochę zimy, trochę lata.",
  "neg-30": "Król wydał ucztę na zamku.",
  "neg-31": "Numer 44051401350 nie przeszedł walidacji w systemie.",
  "neg-32": "Ciąg 1234563210 to przykładowy identyfikator testowy.",
  "neg-33": "Wartość zamówienia: 123.456.789 zł brutto.",
  "neg-34": "Pojazd MERCEDES odholowano na parking strzeżony.",
  "neg-35": "pojazd marki KIA CEED2 oraz auto VW GOLF5 sprzedano.",
  "neg-36": "Golub-Dobrzyń Zaprasza turystów przez cały rok.",
  "neg-37": "Rolls-Royce Motor Cars otworzył salon.",
  "neg-38": "Mieszka przy ul. Rakowieckiej od dawna.",
  "neg-39": "Przyciski i Klocki hamulcowe wymieniono.",
  "neg-40": "Wnioski dowodowe stron oddalono w całości.",
  "neg-41": "Szkoła im. A. Mickiewicza ogłosiła nabór.",
  "neg-42": "Ciąg 10 2010 9712 0000 1234 5678 9013 ma błędną sumę kontrolną.",
  "neg-43": "Numer porządkowy pozycji w rejestrze 000012345 pozostaje jawny.",
  "neg-44": "Lp. 123456789 w wykazie środków trwałych.",
  "neg-45": "Orzeczenie w sprawie III CZP 45/22 przywołano w uzasadnieniu.",
  "neg-46": "Oprogramowanie w wersji 10.0.19045.3803 zainstalowano zdalnie.",
  "neg-47": "Aktualizacja do wersji 1.2.3.4 usuwa błędy krytyczne.",
  "neg-48": "Seria ABA300001 nie jest poprawnym numerem dowodu.",
  "neg-49": "Wartość 12345678901 pojawiła się w logu importu.",
  "neg-50": "Zamówienie nr 987654321 zostało wysłane kurierem.",
  "neg-51": "Faktura VAT nr 4561237891 czeka na akceptację.",
  "neg-52": "Pan Tadeusz to najsłynniejsza polska epopeja narodowa.",
  "neg-53": "Uniwersytet Warmiński ogłosił nabór na studia.",
  "neg-54": "Kredyt zaciągnięto w Banku Śląskim w zeszłym roku.",
  "neg-55": "Komitet Obywatelski wystosował apel do władz.",
  "neg-56": "Powstał Ogólnopolski Związek Przewoźników Drogowych.",
  "neg-57": "Uniwersytet Jagielloński świętuje jubileusz.",
  "neg-58": "Skargę rozpoznał Wojewódzki Sąd Administracyjny.",
  "neg-59": "Postanowienie zapadło w sprawie IV CSK 77/24.",
  "neg-60": "Skargę kasacyjną zarejestrowano pod III UK 210/23.",
  "neg-61": "Sąd Rejonowy w Pruszkowie wydał nakaz.",
  "neg-62": "Prokuratura Krajowa wszczęła postępowanie.",
  "neg-63": "Wojewódzki Fundusz Ochrony Środowiska ogłosił nabór.",
  "neg-64": "Naczelny Sąd Administracyjny oddalił skargę.",
  "neg-65": "Sroka skakała po świeżo skoszonym trawniku.",
  "neg-66": "Mróz ściął kałuże twardą skorupą nad ranem.",
  "neg-67": "Kruk siedział na gałęzi i obserwował drogę.",
  "neg-68": "<Name>Produkt X200</Name> dodano do katalogu ofert.",
  "neg-69": "Repozytorium https://github.com/apache/kafka jest publiczne.",
  "neg-70": "Identyfikator w systemie: USR-005182 pozostaje jawny.",
  "neg-71": "Kwota 1.234.567 zł oraz wersja 10.2.3 z dnia 12.05.1990.",
  "neg-72": "Rozporządzenie (WE) nr 1234/2009 oraz dyrektywa WE 123 obowiązują.",
  "neg-73": "Spotkanie zespołu odbyło się w Gdańsku przy kawie.",
  "neg-74": "Powiat: Pruszkowski, województwo mazowieckie pozostają jawne.",
  "neg-75": "Kwota 50000 Euro oraz faktura 12345 Netto do rozliczenia.",
  "neg-76": "polski rynek pracy zmienia się, a wąski segment rośnie.",
  "neg-77": "mam ochotę na kawę, ala woli herbatę, ola pije wodę.",
  "neg-78": "Pan był wczoraj w urzędzie, a Pani ma rację w tej sprawie.",
  "neg-79": "nazywam się tak, jak trzeba, i nic więcej nie dodam.",
  "neg-80": "USTAWA O OCHRONIE DANYCH OSOBOWYCH obowiązuje wszystkich.",
  "neg-81": "NACZELNY SĄD ADMINISTRACYJNY oddalił skargę kasacyjną.",
  "neg-82": "UNIWERSYTET WARSZAWSKI ogłosił nabór na nowy kierunek.",
  "neg-83": "PREZES ZARZĄDU SPÓŁKI podpisał uchwałę o połączeniu.",
  "neg-84": "SĘDZIA SĄDU REJONOWEGO rozpoznał sprawę na posiedzeniu.",
  "neg-85": "platformach społecznościowych Urzędu Marszałkowskiego Województwa Śląskiego.",
  "neg-86": "Petycję rozpatrzył Urząd Marszałkowski Województwa Śląskiego.",
  "neg-87": "Zdarzenie miało miejsce u zbiegu ulic Tadeusza Kościuszki oraz świadka.",
  "neg-88": "Rondo Romana Dmowskiego było wczoraj zamknięte.",
  "neg-89": "Jadąc aleją Tadeusza Kościuszki minął sygnalizację świetlną.",
  "neg-90": "Sklep mieści się na rogu ul. gen. Władysława Andersa.",
  "neg-91": "Na odcinku od Ronda Dmowskiego wprowadzono objazd.",
  "neg-92": "Pozycja 32 774 91 55 w wykazie inwentarza magazynowego.",
  "neg-93": "Park Narodowy Gór Stołowych 2024 świętuje jubileusz.",
  "neg-94": "Decyzję wydał Starosta Wołomiński osobiście.",
  "neg-95": "Bulwar Filadelfijski 1998 objęty jest programem rewitalizacji nadbrzeży.",
  "os-o-01": "Sprawę Nowaka umorzono z braku dowodów.",
  "os-o-02": "Sąd doręczył Nowakowi odpis wyroku.",
  "os-o-03": "Ugoda zawarta z Nowakiem obowiązuje od stycznia.",
  "os-o-04": "Pełnomocnik Wójcika złożył apelację.",
  "os-o-05": "Wierzyciel wystąpił przeciwko Wójcikowi z pozwem.",
  "os-o-06": "Negocjacje z Wójcikiem zakończyły się ugodą.",
  "os-o-07": "Zeznania Kaczmarka potwierdzili sąsiedzi.",
  "os-o-08": "Komornik zajął wynagrodzenie Woźniaka.",
  "os-o-09": "Grunt należał wcześniej do Kowalczyka.",
  "os-o-10": "Wniosek Kowalskiego oddalono w całości.",
  "os-o-11": "Kowalskiemu wręczono wypowiedzenie umowy.",
  "os-o-12": "Protokół podpisano razem z Kowalskim.",
  "os-o-13": "Apelacja Wiśniewskiego okazała się skuteczna.",
  "os-o-14": "Sąd przyznał Wiśniewskiemu zwrot kosztów.",
  "os-o-15": "Obrońca Zielińskiego wniósł o uniewinnienie.",
  "os-o-16": "Zeznania Wiśniewskiej uznano za wiarygodne.",
  "os-o-17": "Sprawę przeciwko Zielińskiej zawieszono.",
  "os-o-18": "Rozmawiałem z Kowalską o warunkach najmu.",
  "os-o-19": "Mieszkanie Kamińskiej zostało wycenione.",
  "os-o-20": "Nieruchomość Kowalskich objęto hipoteką.",
  "os-o-21": "Spadek po Nowakach podzielono na troje dzieci.",
  "os-o-22": "Roszczenia Wiśniewskich przedawniły się w maju.",
  "os-o-23": "Pozew Jana Kowalskiego wpłynął we wtorek.",
  "os-o-24": "Sąd wysłuchał Anny Wiśniewskiej na rozprawie zdalnej.",
  "os-o-25": "Zarzuty postawiono Piotrowi Zielińskiemu.",
  "os-o-26": "Nagrodę wręczono Magdalenie Woźniak.",
  "os-o-27": "u Szymańskiego w biurze zostawiłem parasol",
  "os-o-28": "pytałem Lewandowskiego, ale nie odpisał",
  "os-o-29": "wczoraj widziałem Dąbrowskiego w urzędzie",
  "os-o-30": "Krawczykowi nikt nie uwierzył.",
  "os-o-31": "Dokumenty od Grabowskiej dotarły pocztą.",
  "os-o-32": "Decyzję wysłano do Jankowskich.",
  "os-o-33": "Na ulicy spotkałem wczoraj Jana Kowalskiego.",
  "os-p-01": "Pozwany Jan Kowalski nie stawił się na rozprawie.",
  "os-p-02": "Powódka Anna Nowak wniosła o zasądzenie kosztów.",
  "os-p-03": "Świadek Piotr Wiśniewski zeznał, że widział zdarzenie.",
  "os-p-04": "Umowę podpisała Katarzyna Zielińska w obecności notariusza.",
  "os-p-05": "Wniosek złożył Tomasz Szymański dnia 12 marca.",
  "os-p-06": "Magdalena Woźniak została powołana do zarządu.",
  "os-p-07": "Krzysztof Kaczmarek prowadzi warsztat przy rynku.",
  "os-p-08": "Na spotkanie przyszedł Marek Mazur z dokumentami.",
  "os-p-09": "Ewa Lewandowska odebrała przesyłkę osobiście.",
  "os-p-10": "hej, pisze do was Jakub Dąbrowski, mam pytanie o umowę",
  "os-p-11": "imię i nazwisko: jan kowalski",
  "os-p-12": "od anna nowak dostałem pismo",
  "os-p-13": "pełnomocnik: anna kowalska-nowak",
  "os-p-14": "Anna Kowalska wygrała sprawę w drugiej instancji.",
  "os-p-15": "Agnieszka Wiśniewska złożyła reklamację w sklepie.",
  "os-p-16": "Nowa księgowa to Joanna Zielińska.",
  "os-p-17": "Anna i Jan Kowalscy kupili mieszkanie na osiedlu.",
  "os-p-18": "Państwo Nowakowie wynajmują lokal od miasta.",
  "os-p-19": "Maria Nowak-Kowalska reprezentuje spółkę.",
  "os-p-20": "Pełnomocnikiem jest Karolina Zielińska-Wójcik.",
  "os-p-21": "Pismo podpisała Hanna Kowalczyk-Nowak.",
  "os-p-22": "Nazywam się Robert Malinowski i piszę w sprawie faktury.",
  "os-p-23": "Mam na imię Weronika, nazwisko Sobczak.",
  "os-p-24": "Pan Wiśniewski nie odpowiada na wezwania.",
  "os-p-25": "Proszę przekazać dokumenty pani Kowalskiej.",
  "os-p-26": "Imię i nazwisko: Adrian Borkowski.",
  "os-p-27": "nazywam się pAMELA nOWAK i czekam na odpowiedź.",
  "os-p-28": "Nazywam się PAMELA NOWAK, proszę o kontakt telefoniczny.",
  "os-p-29": "mam na imię PAMELA i dzwonię w sprawie faktury.",
  "os-p-30": "Imię: pamela
Nazwisko: nowak",
  "os-p-31": "PAMELA NOWAK złożyła wniosek w urzędzie miasta.",
  "os-p-32": "W składzie SSO JAN KOWALSKI wydał wyrok.",
  "os-p-33": "Rozmawiałem z PANEM MARKIEM WIŚNIEWSKIM osobiście.",
  "os-p-34": "POZWANY JAN KOWALSKI nie stawił się na rozprawie.",
  "os-p-35": "Wezwanie otrzymał PAN KOWALSKI dnia wczorajszego.",
  "os-r-01": "Marek Bąkiewicz podpisał protokół odbioru.",
  "os-r-02": "Alicja Krzemieniecka złożyła wniosek o urlop.",
  "os-r-03": "Tadeusz Gzowski wynajął magazyn pod miastem.",
  "os-r-04": "Ewelina Zdrojewczyk odebrała nagrodę jubileuszową.",
  "os-r-05": "Norbert Pękalski przesłał ofertę w terminie.",
  "os-r-06": "Świętomira Gzowska przyszła na przesłuchanie.",
  "os-r-07": "Bożydar Krzemieniecki prowadzi kancelarię w Radomiu.",
  "os-r-08": "Protokół sporządził Wieńczysław Trzebiatowski.",
  "os-r-09": "napisała do mnie Krzemieniecka w sprawie zaliczki",
  "os-r-10": "sprawę Zdrojewczyka przekazano do prokuratury",
  "os-r-11": "list od Gzowskiego leżał na biurku tydzień",
  "os-r-12": "Bąkiewiczowi zależało na szybkiej wypłacie.",
  "os-r-13": "Zaległości Trzebiatowskiego rosły z miesiąca na miesiąc.",
  "os-r-14": "Wniosek Młodzianowskiej rozpatrzono odmownie.",
  "os-r-15": "Pani Krzemieniecka prosi o kontakt po godzinie 15.",
  "os-r-16": "Proszę o pilny telefon do pana Pękalskiego.",
  "os-r-17": "Pan Habdank-Wojewódzki oczekuje w sekretariacie.",
  "os-r-18": "Nazywam się Melania Szczudłowska i proszę o fakturę korygującą.",
  "os-r-19": "Fiołkowska wygrała przetarg na dostawę mebli.",
  "os-r-20": "Opinię przygotowała Gzowska z działu prawnego.",
  "os-r-21": "Państwo Bąkiewiczowie odwołali się od decyzji.",
  "os-r-22": "Spór z Krzemienieckimi trwa od dwóch lat.",
  "os-r-23": "Dorota Sajkowska-Mróz podpisała aneks.",
  "os-r-24": "opinia Rzepeckiej-Gil była druzgocąca",
  "os-rn-01": "list od Achtelika leżał tydzień na biurku",
  "os-rn-02": "sprawę Fąfary umorzono w drugiej instancji",
  "os-rn-03": "zeznania Gągały spisano protokolarnie",
  "os-rn-04": "wniosek Grzmota rozpatrzono odmownie",
  "os-rn-05": "do akt dołączono notatkę Ciołka z rozmowy",
  "os-rn-06": "reklamację złożył wczoraj Müller osobiście",
  "os-rn-07": "umowę parafował Nguyen dzień wcześniej",
  "os-rn-08": "protokół podpisał Kovač w obecności świadka",
  "os-rn-09": "opinię biegłego sporządził Popescu w terminie",
  "os-rn-10": "pełnomocnikiem powoda był mecenas Schmidt",
  "os-rn-11": "sprawę Pytlaka odroczono do przyszłego miesiąca",
  "os-rn-12": "zeznania Habaja spisano na komisariacie",
  "os-rn-13": "wniosek Momota oddalono w pierwszej instancji",
  "os-rn-14": "do akt dołączono notatkę Cieciory z narady",
  "os-rn-15": "pismo od Bździucha wpłynęło z opóźnieniem",
  "os-rn-16": "opinię prawną wydał Petrov zeszłego tygodnia",
  "os-rn-17": "umowę serwisową parafował Horvat osobiście",
  "os-rn-18": "reklamację rozpatrzył Weber w dwa dni",
  "os-rn-19": "kontrakt firmował Rossi przed notariuszem",
  "os-sl-01": "Sprawę Szczepaniaka umorzono w drugiej instancji.",
  "os-sl-02": "Zeznania Madeja potwierdzili sąsiedzi.",
  "os-sl-03": "Wniosek Michalika rozpatrzono odmownie.",
  "os-sl-04": "list od Ratajczaka leżał tydzień na biurku",
  "os-sl-05": "pismo od Grzelaka wpłynęło z opóźnieniem",
  "os-sl-06": "opinię sporządził biegły Kujawa w terminie",
  "os-sl-07": "reklamację złożył wczoraj Nguyen osobiście",
  "os-sl-08": "umowę serwisową parafował Melnyk",
  "os-sl-09": "protokół podpisał mecenas Schulz",
  "os-sl-10": "do akt dołączono zeznania świadka Petrova",
  "os-sl-11": "Zgłosił się wczoraj Janek Kowalski osobiście.",
  "os-sl-12": "Reklamację złożyła Kasia Nowak w sklepie.",
  "str-01": "PESEL: [PESEL]",
  "str-02": "Mój PESEL to [PESEL], proszę o weryfikację.",
  "str-03": "Wnioskodawca legitymuje się numerem PESEL [PESEL].",
  "str-04": "W formularzu wpisano [PESEL] jako identyfikator.",
  "str-05": "NIP firmy: [NIP].",
  "str-06": "Faktura wystawiona dla NIP [NIP].",
  "str-07": "Kontrahent posługuje się NIP [NIP].",
  "str-08": "Numer identyfikacji podatkowej [NIP] należy do spółki.",
  "str-09": "REGON [REGON] widnieje w rejestrze.",
  "str-10": "Spółka o numerze REGON: [REGON] zawiesiła działalność.",
  "str-11": "[REGON] to REGON jednostki lokalnej.",
  "str-12": "Przelew na rachunek [NR-KONTA] do końca miesiąca.",
  "str-13": "IBAN: [NR-KONTA] (mBank).",
  "str-14": "Numer konta: [NR-KONTA] prowadzony w PKO.",
  "str-15": "Zwrot nastąpi na konto [NR-KONTA] wskazane w umowie.",
  "str-16": "Kontakt: [TELEFON] po godzinie 17.",
  "str-17": "Zadzwoń pod [TELEFON] wieczorem.",
  "str-18": "Numer telefonu [TELEFON] jest nieaktualny.",
  "str-19": "sms na [TELEFON] nie doszedł",
  "str-20": "Infolinia oddzwoni z [TELEFON].",
  "str-21": "Proszę o odpowiedź na [EMAIL] w tym tygodniu.",
  "str-22": "Zgłoszenia przyjmujemy pod adresem [EMAIL].",
  "str-23": "e-mail: [EMAIL] (służbowy)",
  "str-24": "Adres do doręczeń: 00-950 Warszawa, skrytka 21.",
  "str-25": "Przesyłkę nadano z kodu 31-042.",
  "str-26": "Zamieszkały przy ul. Polnej 12/3 w Krakowie.",
  "str-27": "Biuro mieści się przy al. Jerozolimskich 44.",
  "str-28": "Nowy lokal: os. Piastów 3/12, obok szkoły.",
  "str-29": "Spotkanie odbędzie się na pl. Zbawiciela 5.",
  "str-30": "Mieszkam na ulicy Krakowskie Przedmieście 26/28.",
  "str-31": "ul. Marszałkowska 140 m. 7 to adres korespondencyjny.",
  "str-32": "Wnioskodawca, ur. 12.05.1985, zamieszkały w Łodzi.",
  "str-33": "Urodzona 3.04.1992 w Poznaniu.",
  "str-34": "Data urodzenia: 1990-01-01 (wg aktu).",
  "str-35": "urodzony 07/11/1978 w Gdańsku",
  "str-36": "Seria i numer dowodu: ABA300000.",
  "str-37": "Legitymuje się dowodem SQU325664.",
  "str-38": "Dłużnik (PESEL [PESEL]) zamieszkały przy ul. Długiej 8/2, tel. [TELEFON].",
  "str-39": "Nadawca Piotr Nowak, konto [NR-KONTA], e-mail [EMAIL].",
  "str-40": "Klientka Anna Zielińska (PESEL [PESEL], tel. [TELEFON]) prosi o kontakt.",
  "str-41": "Sygn. akt III CZP 12/23 — uchwała siedmiu sędziów.",
  "str-42": "W formularzu wpisano REGON [REGON] z błędem.",
  "str-43": "Podano rachunek [NR-KONTA] (błędna suma).",
  "str-44": "Token: eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ4In0.abc-DEF_1",
  "str-45": "Adres IP serwera: 192.168.1.20 w sieci lokalnej.",
  "str-46": "IPv6: 2001:db8::8a2e:370:7334 przydzielony automatycznie.",
  "str-47": "MAC karty sieciowej 00:1A:2B:3C:4D:5E jest unikalny.",
  "str-48": "Numer VIN WAUZZZ8V4JA123456 widnieje w dowodzie rejestracyjnym.",
  "str-49": "Prawo jazdy nr KR1234567 wydane w 2020 roku.",
  "str-50": "Prawo jazdy: 12345/67/8901 (kat. B).",
  "str-51": "Pojazd o nr rejestracyjnym WI1234K, marka Audi.",
  "str-52": "Klucz API sk_live_a1b2c3d4e5f6g7h8i9j0 w konfiguracji.",
  "str-53": "Sekret ghp_AbCdEfGh1234567890IjKlMnOpQrStUv w repozytorium.",
  "str-54": "Telefon kontaktowy [TELEFON] czynny do 16.",
  "str-55": "Telefon [TELEFON] zapisano w aktach.",
  "str-56": "Interfejs o adresie aabb.ccdd.eeff w notacji Cisco.",
  "str-57": "Sygn. akt: II SA/Wa 1234/23 w postępowaniu.",
  "str-58": "Spółka wpisana do KRS pod numerem 0000123456.",
  "str-59": "Legitymował się prawem jazdy nr 05678/13/1234 podczas kontroli.",
  "str-60": "Zamieszkały przy ul. Polnej 12 lok. 5 od urodzenia.",
  "str-61": "Świadek, ur. dnia 31 XII 2010, stawił się z opiekunem.",
  "str-62": "Motocykl ZS 4567 zabezpieczono na parkingu.",
  "str-63": "Drugi pojazd WW 1234A odholowano.",
  "str-64": "Przelew na [NR-KONTA] zaksięgowano.",
  "str-65": "Zeznania złożył A. Baran do protokołu.",
  "str-66": "Stawił się Jean-Pierre Dubois z tłumaczem.",
  "str-67": "Ciągnik siodłowy GD 890KL zatrzymano do kontroli.",
  "str-68": "Do wiadomości: K. Baran, referat pierwszy.",
  "str-69": "<Customer><Name>Jan</Name><Surname>Kowalski</Surname><City>Warszawa</City><Street>Leśna 15</Street></Customer>",
  "str-70": "{ "firstName": "Jan", "lastName": "Kowalski", "city": "Warszawa", "street": "Lipowa 12" }",
  "str-71": "Zgłoszenie https://portal.example.com/ticket?id=987001234&user=tomasz.kaminski w kolejce.",
  "str-72": "Login użytkownika: tkaminski (konto domenowe).",
  "str-73": "Kontakt: [TELEFON], [TELEFON] oraz stacjonarny [TELEFON].",
  "str-74": "Zabezpieczono pojazdy: WW 1234A, ZS 4567, WE 123AB oraz KR 8XY90.",
  "str-75": "Zgłosił się J0AN K0WALSKI, zamieszkały uI. Lip0wa 15.",
  "str-76": "Biuro przy ul. Morskiej 12 w Gdańsku czynne od 8:00.",
  "str-77": "Załącznik: Umowa_Kredytowa_Adam_Kowalski.pdf w aktach.",
  "str-78": "Zgłosił się Jan KowaIski po odbiór dokumentów.",
  "str-79": "Adres korespondencyjny: ul. Krótka 5, 65048 Zielona Góra.",
  "str-80": "Kontakt: [EMAIL] w sprawie umowy.",
  "str-81": "Petycję podpisał Jan Marszałkowski, przewodniczący stowarzyszenia.",
  "str-82": "Adres do doręczeń: UL. JULIUSZA LIGONIA 46 w budynku.",
  "str-83": "W rejestrze figuruje Gliwice (miasto) jako jednostka.",
  "str-84": "Kontakt telefoniczny pod numerem [TELEFON] w godzinach pracy.",
  "str-85": "Wnioskodawca podał PESEL to [PESEL] w formularzu.",
  "str-86": "Adres zamieszkania: Rondo Kościuszki 5 w bloku.",
  "str-87": "Na rachunek wspólnoty [NR-KONTA] wpłynęły zaliczki.",
}
`;

exports[`golden: korpus benchmarku — pseudonimizacja osób ([OSOBA-A]…) 1`] = `
{
  "neg-01": "Zgodnie z art. 123 456 789 nie stosuje się przepisów przejściowych.",
  "neg-02": "Podstawą roszczenia jest art. 415 KC.",
  "neg-03": "Oskarżono go z art. 148 § 1 Kodeksu karnego.",
  "neg-04": "Zastosowanie ma ust. 2 pkt 3 lit. b.",
  "neg-05": "Rozporządzenie opublikowano w Dz.U. z 2023 r. poz. 1234.",
  "neg-06": "Przepis § 7 regulaminu pozostaje w mocy.",
  "neg-07": "Zakres art. 10-100 obejmuje przepisy ogólne.",
  "neg-08": "Wyrok w sprawie II K 123/45 uprawomocnił się.",
  "neg-09": "Apelację oddalono w sprawie I ACa 1234/22.",
  "neg-10": "Sąd Najwyższy oddalił skargę kasacyjną.",
  "neg-11": "Trybunał Konstytucyjny odroczył ogłoszenie wyroku.",
  "neg-12": "Nowelizacja Kodeksu Cywilnego weszła w życie w maju.",
  "neg-13": "Urząd Skarbowy wezwał spółkę do korekty deklaracji.",
  "neg-14": "Ministerstwo Sprawiedliwości opublikowało projekt ustawy.",
  "neg-15": "Zakład Ubezpieczeń Społecznych wydał decyzję odmowną.",
  "neg-16": "Naczelny Sąd Administracyjny uchylił zaskarżony wyrok.",
  "neg-17": "Skierowano pytanie do Izby Cywilnej Sądu Najwyższego.",
  "neg-18": "Prokuratura Okręgowa w Warszawie umorzyła śledztwo.",
  "neg-19": "Rzecznik Praw Obywatelskich zabrał głos w debacie.",
  "neg-20": "Wilk biegał po lesie za sarną.",
  "neg-21": "Lis przemknął przez drogę tuż przed autem.",
  "neg-22": "Baran to pierwszy znak zodiaku.",
  "neg-23": "Mazurek wielkanocny stygł na parapecie.",
  "neg-24": "Sowa hukała całą noc pod oknem.",
  "neg-25": "Kruk krukowi oka nie wykole, jak mówi przysłowie.",
  "neg-26": "Dudek to ptak o charakterystycznym czubie.",
  "neg-27": "Kot przewrócił doniczkę z parapetu.",
  "neg-28": "W piątek trzynastego lepiej zostać w domu.",
  "neg-29": "Kwiecień plecień, bo przeplata trochę zimy, trochę lata.",
  "neg-30": "Król wydał ucztę na zamku.",
  "neg-31": "Numer 44051401350 nie przeszedł walidacji w systemie.",
  "neg-32": "Ciąg 1234563210 to przykładowy identyfikator testowy.",
  "neg-33": "Wartość zamówienia: 123.456.789 zł brutto.",
  "neg-34": "Pojazd MERCEDES odholowano na parking strzeżony.",
  "neg-35": "pojazd marki KIA CEED2 oraz auto VW GOLF5 sprzedano.",
  "neg-36": "Golub-Dobrzyń Zaprasza turystów przez cały rok.",
  "neg-37": "Rolls-Royce Motor Cars otworzył salon.",
  "neg-38": "Mieszka przy ul. Rakowieckiej od dawna.",
  "neg-39": "Przyciski i Klocki hamulcowe wymieniono.",
  "neg-40": "Wnioski dowodowe stron oddalono w całości.",
  "neg-41": "Szkoła im. A. Mickiewicza ogłosiła nabór.",
  "neg-42": "Ciąg 10 2010 9712 0000 1234 5678 9013 ma błędną sumę kontrolną.",
  "neg-43": "Numer porządkowy pozycji w rejestrze 000012345 pozostaje jawny.",
  "neg-44": "Lp. 123456789 w wykazie środków trwałych.",
  "neg-45": "Orzeczenie w sprawie III CZP 45/22 przywołano w uzasadnieniu.",
  "neg-46": "Oprogramowanie w wersji 10.0.19045.3803 zainstalowano zdalnie.",
  "neg-47": "Aktualizacja do wersji 1.2.3.4 usuwa błędy krytyczne.",
  "neg-48": "Seria ABA300001 nie jest poprawnym numerem dowodu.",
  "neg-49": "Wartość 12345678901 pojawiła się w logu importu.",
  "neg-50": "Zamówienie nr 987654321 zostało wysłane kurierem.",
  "neg-51": "Faktura VAT nr 4561237891 czeka na akceptację.",
  "neg-52": "Pan [OSOBA-A] to najsłynniejsza polska epopeja narodowa.",
  "neg-53": "Uniwersytet Warmiński ogłosił nabór na studia.",
  "neg-54": "Kredyt zaciągnięto w Banku Śląskim w zeszłym roku.",
  "neg-55": "Komitet Obywatelski wystosował apel do władz.",
  "neg-56": "Powstał Ogólnopolski Związek Przewoźników Drogowych.",
  "neg-57": "Uniwersytet Jagielloński świętuje jubileusz.",
  "neg-58": "Skargę rozpoznał Wojewódzki Sąd Administracyjny.",
  "neg-59": "Postanowienie zapadło w sprawie IV CSK 77/24.",
  "neg-60": "Skargę kasacyjną zarejestrowano pod III UK 210/23.",
  "neg-61": "Sąd Rejonowy w Pruszkowie wydał nakaz.",
  "neg-62": "Prokuratura Krajowa wszczęła postępowanie.",
  "neg-63": "Wojewódzki Fundusz [OSOBA-A] ogłosił nabór.",
  "neg-64": "Naczelny Sąd Administracyjny oddalił skargę.",
  "neg-65": "Sroka skakała po świeżo skoszonym trawniku.",
  "neg-66": "Mróz ściął kałuże twardą skorupą nad ranem.",
  "neg-67": "Kruk siedział na gałęzi i obserwował drogę.",
  "neg-68": "<Name>Produkt X200</Name> dodano do katalogu ofert.",
  "neg-69": "Repozytorium https://github.com/apache/kafka jest publiczne.",
  "neg-70": "Identyfikator w systemie: USR-005182 pozostaje jawny.",
  "neg-71": "Kwota 1.234.567 zł oraz wersja 10.2.3 z dnia 12.05.1990.",
  "neg-72": "Rozporządzenie (WE) nr 1234/2009 oraz dyrektywa WE 123 obowiązują.",
  "neg-73": "Spotkanie zespołu odbyło się w Gdańsku przy kawie.",
  "neg-74": "Powiat: Pruszkowski, województwo mazowieckie pozostają jawne.",
  "neg-75": "Kwota 50000 Euro oraz faktura 12345 Netto do rozliczenia.",
  "neg-76": "polski rynek pracy zmienia się, a wąski segment rośnie.",
  "neg-77": "mam ochotę na kawę, ala woli herbatę, ola pije wodę.",
  "neg-78": "Pan był wczoraj w urzędzie, a Pani ma rację w tej sprawie.",
  "neg-79": "nazywam się tak, jak trzeba, i nic więcej nie dodam.",
  "neg-80": "USTAWA O OCHRONIE DANYCH OSOBOWYCH obowiązuje wszystkich.",
  "neg-81": "NACZELNY SĄD ADMINISTRACYJNY oddalił skargę kasacyjną.",
  "neg-82": "UNIWERSYTET WARSZAWSKI ogłosił nabór na nowy kierunek.",
  "neg-83": "PREZES ZARZĄDU SPÓŁKI podpisał uchwałę o połączeniu.",
  "neg-84": "SĘDZIA SĄDU REJONOWEGO rozpoznał sprawę na posiedzeniu.",
  "neg-85": "platformach społecznościowych Urzędu Marszałkowskiego Województwa Śląskiego.",
  "neg-86": "Petycję rozpatrzył Urząd Marszałkowski Województwa Śląskiego.",
  "neg-87": "Zdarzenie miało miejsce u zbiegu ulic Tadeusza Kościuszki oraz świadka.",
  "neg-88": "Rondo Romana Dmowskiego było wczoraj zamknięte.",
  "neg-89": "Jadąc aleją Tadeusza Kościuszki minął sygnalizację świetlną.",
  "neg-90": "Sklep mieści się na rogu ul. gen. Władysława Andersa.",
  "neg-91": "Na odcinku od Ronda Dmowskiego wprowadzono objazd.",
  "neg-92": "Pozycja 32 774 91 55 w wykazie inwentarza magazynowego.",
  "neg-93": "Park Narodowy Gór Stołowych 2024 świętuje jubileusz.",
  "neg-94": "Decyzję wydał Starosta Wołomiński osobiście.",
  "neg-95": "Bulwar Filadelfijski 1998 objęty jest programem rewitalizacji nadbrzeży.",
  "os-o-01": "Sprawę [OSOBA-A] umorzono z braku dowodów.",
  "os-o-02": "Sąd doręczył [OSOBA-A] odpis wyroku.",
  "os-o-03": "Ugoda zawarta z [OSOBA-A] obowiązuje od stycznia.",
  "os-o-04": "Pełnomocnik [OSOBA-A] złożył apelację.",
  "os-o-05": "Wierzyciel wystąpił przeciwko [OSOBA-A] z pozwem.",
  "os-o-06": "Negocjacje z [OSOBA-A] zakończyły się ugodą.",
  "os-o-07": "Zeznania [OSOBA-A] potwierdzili sąsiedzi.",
  "os-o-08": "Komornik zajął wynagrodzenie [OSOBA-A].",
  "os-o-09": "Grunt należał wcześniej do [OSOBA-A].",
  "os-o-10": "Wniosek [OSOBA-A] oddalono w całości.",
  "os-o-11": "[OSOBA-A] wręczono wypowiedzenie umowy.",
  "os-o-12": "Protokół podpisano razem z [OSOBA-A].",
  "os-o-13": "Apelacja [OSOBA-A] okazała się skuteczna.",
  "os-o-14": "Sąd przyznał [OSOBA-A] zwrot kosztów.",
  "os-o-15": "Obrońca [OSOBA-A] wniósł o uniewinnienie.",
  "os-o-16": "Zeznania [OSOBA-A] uznano za wiarygodne.",
  "os-o-17": "Sprawę przeciwko [OSOBA-A] zawieszono.",
  "os-o-18": "Rozmawiałem z [OSOBA-A] o warunkach najmu.",
  "os-o-19": "Mieszkanie [OSOBA-A] zostało wycenione.",
  "os-o-20": "Nieruchomość [OSOBA-A] objęto hipoteką.",
  "os-o-21": "Spadek po [OSOBA-A] podzielono na troje dzieci.",
  "os-o-22": "Roszczenia [OSOBA-A] przedawniły się w maju.",
  "os-o-23": "Pozew [OSOBA-A] wpłynął we wtorek.",
  "os-o-24": "Sąd wysłuchał [OSOBA-A] na rozprawie zdalnej.",
  "os-o-25": "Zarzuty postawiono [OSOBA-A].",
  "os-o-26": "Nagrodę wręczono [OSOBA-A].",
  "os-o-27": "u [OSOBA-A] w biurze zostawiłem parasol",
  "os-o-28": "pytałem [OSOBA-A], ale nie odpisał",
  "os-o-29": "wczoraj widziałem [OSOBA-A] w urzędzie",
  "os-o-30": "[OSOBA-A] nikt nie uwierzył.",
  "os-o-31": "Dokumenty od [OSOBA-A] dotarły pocztą.",
  "os-o-32": "Decyzję wysłano do [OSOBA-A].",
  "os-o-33": "Na ulicy spotkałem wczoraj [OSOBA-A].",
  "os-p-01": "Pozwany [OSOBA-A] nie stawił się na rozprawie.",
  "os-p-02": "Powódka [OSOBA-A] wniosła o zasądzenie kosztów.",
  "os-p-03": "Świadek [OSOBA-A] zeznał, że widział zdarzenie.",
  "os-p-04": "Umowę podpisała [OSOBA-A] w obecności notariusza.",
  "os-p-05": "Wniosek złożył [OSOBA-A] dnia 12 marca.",
  "os-p-06": "[OSOBA-A] została powołana do zarządu.",
  "os-p-07": "[OSOBA-A] prowadzi warsztat przy rynku.",
  "os-p-08": "Na spotkanie przyszedł [OSOBA-A] z dokumentami.",
  "os-p-09": "[OSOBA-A] odebrała przesyłkę osobiście.",
  "os-p-10": "hej, pisze do was [OSOBA-A], mam pytanie o umowę",
  "os-p-11": "imię i nazwisko: [IMIĘ I NAZWISKO]",
  "os-p-12": "od [OSOBA-A] dostałem pismo",
  "os-p-13": "pełnomocnik: [OSOBA-A]",
  "os-p-14": "[OSOBA-A] wygrała sprawę w drugiej instancji.",
  "os-p-15": "[OSOBA-A] złożyła reklamację w sklepie.",
  "os-p-16": "Nowa księgowa to [OSOBA-A].",
  "os-p-17": "[OSOBA-A] i [OSOBA-A] kupili mieszkanie na osiedlu.",
  "os-p-18": "Państwo [OSOBA-A] wynajmują lokal od miasta.",
  "os-p-19": "[OSOBA-A] reprezentuje spółkę.",
  "os-p-20": "Pełnomocnikiem jest [OSOBA-A].",
  "os-p-21": "Pismo podpisała [OSOBA-A].",
  "os-p-22": "Nazywam się [OSOBA-A] i piszę w sprawie faktury.",
  "os-p-23": "Mam na imię [OSOBA-A], nazwisko [OSOBA-B].",
  "os-p-24": "Pan [OSOBA-A] nie odpowiada na wezwania.",
  "os-p-25": "Proszę przekazać dokumenty pani [OSOBA-A].",
  "os-p-26": "Imię i nazwisko: [IMIĘ I NAZWISKO]",
  "os-p-27": "nazywam się [OSOBA-A] i czekam na odpowiedź.",
  "os-p-28": "Nazywam się [OSOBA-A], proszę o kontakt telefoniczny.",
  "os-p-29": "mam na imię [OSOBA-A] i dzwonię w sprawie faktury.",
  "os-p-30": "Imię: [IMIĘ I NAZWISKO]
Nazwisko: [IMIĘ I NAZWISKO]",
  "os-p-31": "[OSOBA-A] złożyła wniosek w urzędzie miasta.",
  "os-p-32": "W składzie SSO [OSOBA-A] wydał wyrok.",
  "os-p-33": "Rozmawiałem z PANEM [OSOBA-A] osobiście.",
  "os-p-34": "POZWANY [OSOBA-A] nie stawił się na rozprawie.",
  "os-p-35": "Wezwanie otrzymał PAN [OSOBA-A] dnia wczorajszego.",
  "os-r-01": "[OSOBA-A] podpisał protokół odbioru.",
  "os-r-02": "[OSOBA-A] złożyła wniosek o urlop.",
  "os-r-03": "[OSOBA-A] wynajął magazyn pod miastem.",
  "os-r-04": "[OSOBA-A] odebrała nagrodę jubileuszową.",
  "os-r-05": "[OSOBA-A] przesłał ofertę w terminie.",
  "os-r-06": "[OSOBA-A] przyszła na przesłuchanie.",
  "os-r-07": "[OSOBA-A] prowadzi kancelarię w Radomiu.",
  "os-r-08": "Protokół sporządził [OSOBA-A].",
  "os-r-09": "napisała do mnie [OSOBA-A] w sprawie zaliczki",
  "os-r-10": "sprawę [OSOBA-A] przekazano do prokuratury",
  "os-r-11": "list od [OSOBA-A] leżał na biurku tydzień",
  "os-r-12": "[OSOBA-A] zależało na szybkiej wypłacie.",
  "os-r-13": "Zaległości [OSOBA-A] rosły z miesiąca na miesiąc.",
  "os-r-14": "Wniosek [OSOBA-A] rozpatrzono odmownie.",
  "os-r-15": "Pani [OSOBA-A] prosi o kontakt po godzinie 15.",
  "os-r-16": "Proszę o pilny telefon do pana [OSOBA-A].",
  "os-r-17": "Pan [OSOBA-A] oczekuje w sekretariacie.",
  "os-r-18": "Nazywam się [OSOBA-A] i proszę o fakturę korygującą.",
  "os-r-19": "[OSOBA-A] wygrała przetarg na dostawę mebli.",
  "os-r-20": "Opinię przygotowała [OSOBA-A] z działu prawnego.",
  "os-r-21": "Państwo [OSOBA-A] odwołali się od decyzji.",
  "os-r-22": "Spór z [OSOBA-A] trwa od dwóch lat.",
  "os-r-23": "[OSOBA-A] podpisała aneks.",
  "os-r-24": "opinia [OSOBA-A] była druzgocąca",
  "os-rn-01": "list od Achtelika leżał tydzień na biurku",
  "os-rn-02": "sprawę Fąfary umorzono w drugiej instancji",
  "os-rn-03": "zeznania Gągały spisano protokolarnie",
  "os-rn-04": "wniosek Grzmota rozpatrzono odmownie",
  "os-rn-05": "do akt dołączono notatkę Ciołka z rozmowy",
  "os-rn-06": "reklamację złożył wczoraj Müller osobiście",
  "os-rn-07": "umowę parafował [OSOBA-A] dzień wcześniej",
  "os-rn-08": "protokół podpisał Kovač w obecności świadka",
  "os-rn-09": "opinię biegłego sporządził Popescu w terminie",
  "os-rn-10": "pełnomocnikiem powoda był mecenas Schmidt",
  "os-rn-11": "sprawę [OSOBA-A] odroczono do przyszłego miesiąca",
  "os-rn-12": "zeznania Habaja spisano na komisariacie",
  "os-rn-13": "wniosek [OSOBA-A] oddalono w pierwszej instancji",
  "os-rn-14": "do akt dołączono notatkę Cieciory z narady",
  "os-rn-15": "pismo od Bździucha wpłynęło z opóźnieniem",
  "os-rn-16": "opinię prawną wydał [OSOBA-A] zeszłego tygodnia",
  "os-rn-17": "umowę serwisową parafował Horvat osobiście",
  "os-rn-18": "reklamację rozpatrzył Weber w dwa dni",
  "os-rn-19": "kontrakt firmował Rossi przed notariuszem",
  "os-sl-01": "Sprawę [OSOBA-A] umorzono w drugiej instancji.",
  "os-sl-02": "Zeznania [OSOBA-A] potwierdzili sąsiedzi.",
  "os-sl-03": "Wniosek [OSOBA-A] rozpatrzono odmownie.",
  "os-sl-04": "list od [OSOBA-A] leżał tydzień na biurku",
  "os-sl-05": "pismo od [OSOBA-A] wpłynęło z opóźnieniem",
  "os-sl-06": "opinię sporządził biegły [OSOBA-A] w terminie",
  "os-sl-07": "reklamację złożył wczoraj [OSOBA-A] osobiście",
  "os-sl-08": "umowę serwisową parafował [OSOBA-A]",
  "os-sl-09": "protokół podpisał mecenas [OSOBA-A]",
  "os-sl-10": "do akt dołączono zeznania świadka [OSOBA-A]",
  "os-sl-11": "Zgłosił się wczoraj [OSOBA-A] osobiście.",
  "os-sl-12": "Reklamację złożyła [OSOBA-A] w sklepie.",
  "str-01": "PESEL: [PESEL]",
  "str-02": "Mój PESEL to [PESEL], proszę o weryfikację.",
  "str-03": "Wnioskodawca legitymuje się numerem PESEL [PESEL].",
  "str-04": "W formularzu wpisano [PESEL] jako identyfikator.",
  "str-05": "NIP firmy: [NIP].",
  "str-06": "Faktura wystawiona dla NIP [NIP].",
  "str-07": "Kontrahent posługuje się NIP [NIP].",
  "str-08": "Numer identyfikacji podatkowej [NIP] należy do spółki.",
  "str-09": "REGON [REGON] widnieje w rejestrze.",
  "str-10": "Spółka o numerze REGON: [REGON] zawiesiła działalność.",
  "str-11": "[REGON] to REGON jednostki lokalnej.",
  "str-12": "Przelew na rachunek [NR-KONTA] do końca miesiąca.",
  "str-13": "IBAN: [NR-KONTA] (mBank).",
  "str-14": "Numer konta: [NR-KONTA] prowadzony w PKO.",
  "str-15": "Zwrot nastąpi na konto [NR-KONTA] wskazane w umowie.",
  "str-16": "Kontakt: [TELEFON] po godzinie 17.",
  "str-17": "Zadzwoń pod [TELEFON] wieczorem.",
  "str-18": "Numer telefonu [TELEFON] jest nieaktualny.",
  "str-19": "sms na [TELEFON] nie doszedł",
  "str-20": "Infolinia oddzwoni z [TELEFON].",
  "str-21": "Proszę o odpowiedź na [EMAIL] w tym tygodniu.",
  "str-22": "Zgłoszenia przyjmujemy pod adresem [EMAIL].",
  "str-23": "e-mail: [EMAIL] (służbowy)",
  "str-24": "Adres do doręczeń: [KOD-POCZTOWY] [MIEJSCOWOŚĆ], skrytka 21.",
  "str-25": "Przesyłkę nadano z kodu [KOD-POCZTOWY].",
  "str-26": "Zamieszkały przy [ADRES] w [MIEJSCOWOŚĆ].",
  "str-27": "Biuro mieści się przy [ADRES].",
  "str-28": "Nowy lokal: [ADRES], obok szkoły.",
  "str-29": "Spotkanie odbędzie się na [ADRES].",
  "str-30": "Mieszkam na [ADRES].",
  "str-31": "[ADRES] to adres korespondencyjny.",
  "str-32": "Wnioskodawca, ur. [DATA-URODZENIA], zamieszkały w [MIEJSCOWOŚĆ].",
  "str-33": "Urodzona [DATA-URODZENIA] w [MIEJSCOWOŚĆ].",
  "str-34": "Data urodzenia: [DATA-URODZENIA] (wg aktu).",
  "str-35": "urodzony [DATA-URODZENIA] w [MIEJSCOWOŚĆ]",
  "str-36": "Seria i numer dowodu: [NR-DOWODU].",
  "str-37": "Legitymuje się dowodem [NR-DOWODU].",
  "str-38": "Dłużnik (PESEL [PESEL]) zamieszkały przy [ADRES], tel. [TELEFON].",
  "str-39": "Nadawca [OSOBA-A], konto [NR-KONTA], e-mail [EMAIL].",
  "str-40": "Klientka [OSOBA-A] (PESEL [PESEL], tel. [TELEFON]) prosi o kontakt.",
  "str-41": "Sygn. akt [ZNAK-SPRAWY] — uchwała siedmiu sędziów.",
  "str-42": "W formularzu wpisano REGON [REGON] z błędem.",
  "str-43": "Podano rachunek [NR-KONTA] (błędna suma).",
  "str-44": "Token: [TOKEN]",
  "str-45": "Adres IP serwera: [IP] w sieci lokalnej.",
  "str-46": "IPv6: [IP] przydzielony automatycznie.",
  "str-47": "MAC karty sieciowej [MAC] jest unikalny.",
  "str-48": "Numer VIN [VIN] widnieje w dowodzie rejestracyjnym.",
  "str-49": "Prawo jazdy nr [PRAWO-JAZDY] wydane w 2020 roku.",
  "str-50": "Prawo jazdy: [PRAWO-JAZDY] (kat. B).",
  "str-51": "Pojazd o nr rejestracyjnym [NR-REJESTRACYJNY], marka Audi.",
  "str-52": "Klucz API [TOKEN] w konfiguracji.",
  "str-53": "Sekret [TOKEN] w repozytorium.",
  "str-54": "Telefon kontaktowy [TELEFON] czynny do 16.",
  "str-55": "Telefon [TELEFON] zapisano w aktach.",
  "str-56": "Interfejs o adresie [MAC] w notacji Cisco.",
  "str-57": "Sygn. akt: [ZNAK-SPRAWY] w postępowaniu.",
  "str-58": "Spółka wpisana do KRS pod numerem [KRS].",
  "str-59": "Legitymował się prawem jazdy nr [PRAWO-JAZDY] podczas kontroli.",
  "str-60": "Zamieszkały przy [ADRES] od urodzenia.",
  "str-61": "Świadek, ur. dnia [DATA-URODZENIA], stawił się z opiekunem.",
  "str-62": "Motocykl [NR-REJESTRACYJNY] zabezpieczono na parkingu.",
  "str-63": "Drugi pojazd [NR-REJESTRACYJNY] odholowano.",
  "str-64": "Przelew na [NR-KONTA] zaksięgowano.",
  "str-65": "Zeznania złożył [OSOBA-A] do protokołu.",
  "str-66": "Stawił się [OSOBA-A] z tłumaczem.",
  "str-67": "Ciągnik siodłowy [NR-REJESTRACYJNY] zatrzymano do kontroli.",
  "str-68": "Do wiadomości: [OSOBA-A], referat pierwszy.",
  "str-69": "<Customer><Name>[IMIĘ I NAZWISKO]</Name><Surname>[OSOBA-A]</Surname><City>[MIEJSCOWOŚĆ]</City><Street>[ADRES]</Street></Customer>",
  "str-70": "{ "firstName": "[IMIĘ I NAZWISKO]", "lastName": "[OSOBA-A]", "city": "[MIEJSCOWOŚĆ]", "street": "[ADRES]" }",
  "str-71": "Zgłoszenie https://portal.example.com/ticket?id=987001234&user=[LOGIN] w kolejce.",
  "str-72": "Login użytkownika: [LOGIN] (konto domenowe).",
  "str-73": "Kontakt: [TELEFON], [TELEFON] oraz stacjonarny [TELEFON].",
  "str-74": "Zabezpieczono pojazdy: [NR-REJESTRACYJNY], [NR-REJESTRACYJNY], [NR-REJESTRACYJNY] oraz [NR-REJESTRACYJNY].",
  "str-75": "Zgłosił się [OSOBA-A], zamieszkały [ADRES].",
  "str-76": "Biuro przy [ADRES] w [MIEJSCOWOŚĆ] czynne od 8:00.",
  "str-77": "Załącznik: Umowa_Kredytowa_[OSOBA-A].pdf w aktach.",
  "str-78": "Zgłosił się [OSOBA-A] po odbiór dokumentów.",
  "str-79": "Adres korespondencyjny: [ADRES], [KOD-POCZTOWY] [MIEJSCOWOŚĆ].",
  "str-80": "Kontakt: [EMAIL] w sprawie umowy.",
  "str-81": "Petycję podpisał [OSOBA-A], przewodniczący stowarzyszenia.",
  "str-82": "Adres do doręczeń: [ADRES] w budynku.",
  "str-83": "W rejestrze figuruje [MIEJSCOWOŚĆ] (miasto) jako jednostka.",
  "str-84": "Kontakt telefoniczny pod numerem [TELEFON] w godzinach pracy.",
  "str-85": "Wnioskodawca podał PESEL to [PESEL] w formularzu.",
  "str-86": "Adres zamieszkania: [ADRES] w bloku.",
  "str-87": "Na rachunek wspólnoty [NR-KONTA] wpłynęły zaliczki.",
}
`;

exports[`golden: korpus benchmarku — wariant domyślny (wszystkie typy) 1`] = `
{
  "neg-01": "Zgodnie z art. 123 456 789 nie stosuje się przepisów przejściowych.",
  "neg-02": "Podstawą roszczenia jest art. 415 KC.",
  "neg-03": "Oskarżono go z art. 148 § 1 Kodeksu karnego.",
  "neg-04": "Zastosowanie ma ust. 2 pkt 3 lit. b.",
  "neg-05": "Rozporządzenie opublikowano w Dz.U. z 2023 r. poz. 1234.",
  "neg-06": "Przepis § 7 regulaminu pozostaje w mocy.",
  "neg-07": "Zakres art. 10-100 obejmuje przepisy ogólne.",
  "neg-08": "Wyrok w sprawie II K 123/45 uprawomocnił się.",
  "neg-09": "Apelację oddalono w sprawie I ACa 1234/22.",
  "neg-10": "Sąd Najwyższy oddalił skargę kasacyjną.",
  "neg-11": "Trybunał Konstytucyjny odroczył ogłoszenie wyroku.",
  "neg-12": "Nowelizacja Kodeksu Cywilnego weszła w życie w maju.",
  "neg-13": "Urząd Skarbowy wezwał spółkę do korekty deklaracji.",
  "neg-14": "Ministerstwo Sprawiedliwości opublikowało projekt ustawy.",
  "neg-15": "Zakład Ubezpieczeń Społecznych wydał decyzję odmowną.",
  "neg-16": "Naczelny Sąd Administracyjny uchylił zaskarżony wyrok.",
  "neg-17": "Skierowano pytanie do Izby Cywilnej Sądu Najwyższego.",
  "neg-18": "Prokuratura Okręgowa w Warszawie umorzyła śledztwo.",
  "neg-19": "Rzecznik Praw Obywatelskich zabrał głos w debacie.",
  "neg-20": "Wilk biegał po lesie za sarną.",
  "neg-21": "Lis przemknął przez drogę tuż przed autem.",
  "neg-22": "Baran to pierwszy znak zodiaku.",
  "neg-23": "Mazurek wielkanocny stygł na parapecie.",
  "neg-24": "Sowa hukała całą noc pod oknem.",
  "neg-25": "Kruk krukowi oka nie wykole, jak mówi przysłowie.",
  "neg-26": "Dudek to ptak o charakterystycznym czubie.",
  "neg-27": "Kot przewrócił doniczkę z parapetu.",
  "neg-28": "W piątek trzynastego lepiej zostać w domu.",
  "neg-29": "Kwiecień plecień, bo przeplata trochę zimy, trochę lata.",
  "neg-30": "Król wydał ucztę na zamku.",
  "neg-31": "Numer 44051401350 nie przeszedł walidacji w systemie.",
  "neg-32": "Ciąg 1234563210 to przykładowy identyfikator testowy.",
  "neg-33": "Wartość zamówienia: 123.456.789 zł brutto.",
  "neg-34": "Pojazd MERCEDES odholowano na parking strzeżony.",
  "neg-35": "pojazd marki KIA CEED2 oraz auto VW GOLF5 sprzedano.",
  "neg-36": "Golub-Dobrzyń Zaprasza turystów przez cały rok.",
  "neg-37": "Rolls-Royce Motor Cars otworzył salon.",
  "neg-38": "Mieszka przy ul. Rakowieckiej od dawna.",
  "neg-39": "Przyciski i Klocki hamulcowe wymieniono.",
  "neg-40": "Wnioski dowodowe stron oddalono w całości.",
  "neg-41": "Szkoła im. A. Mickiewicza ogłosiła nabór.",
  "neg-42": "Ciąg 10 2010 9712 0000 1234 5678 9013 ma błędną sumę kontrolną.",
  "neg-43": "Numer porządkowy pozycji w rejestrze 000012345 pozostaje jawny.",
  "neg-44": "Lp. 123456789 w wykazie środków trwałych.",
  "neg-45": "Orzeczenie w sprawie III CZP 45/22 przywołano w uzasadnieniu.",
  "neg-46": "Oprogramowanie w wersji 10.0.19045.3803 zainstalowano zdalnie.",
  "neg-47": "Aktualizacja do wersji 1.2.3.4 usuwa błędy krytyczne.",
  "neg-48": "Seria ABA300001 nie jest poprawnym numerem dowodu.",
  "neg-49": "Wartość 12345678901 pojawiła się w logu importu.",
  "neg-50": "Zamówienie nr 987654321 zostało wysłane kurierem.",
  "neg-51": "Faktura VAT nr 4561237891 czeka na akceptację.",
  "neg-52": "Pan [IMIĘ I NAZWISKO] to najsłynniejsza polska epopeja narodowa.",
  "neg-53": "Uniwersytet Warmiński ogłosił nabór na studia.",
  "neg-54": "Kredyt zaciągnięto w Banku Śląskim w zeszłym roku.",
  "neg-55": "Komitet Obywatelski wystosował apel do władz.",
  "neg-56": "Powstał Ogólnopolski Związek Przewoźników Drogowych.",
  "neg-57": "Uniwersytet Jagielloński świętuje jubileusz.",
  "neg-58": "Skargę rozpoznał Wojewódzki Sąd Administracyjny.",
  "neg-59": "Postanowienie zapadło w sprawie IV CSK 77/24.",
  "neg-60": "Skargę kasacyjną zarejestrowano pod III UK 210/23.",
  "neg-61": "Sąd Rejonowy w Pruszkowie wydał nakaz.",
  "neg-62": "Prokuratura Krajowa wszczęła postępowanie.",
  "neg-63": "Wojewódzki Fundusz [IMIĘ I NAZWISKO] ogłosił nabór.",
  "neg-64": "Naczelny Sąd Administracyjny oddalił skargę.",
  "neg-65": "Sroka skakała po świeżo skoszonym trawniku.",
  "neg-66": "Mróz ściął kałuże twardą skorupą nad ranem.",
  "neg-67": "Kruk siedział na gałęzi i obserwował drogę.",
  "neg-68": "<Name>Produkt X200</Name> dodano do katalogu ofert.",
  "neg-69": "Repozytorium https://github.com/apache/kafka jest publiczne.",
  "neg-70": "Identyfikator w systemie: USR-005182 pozostaje jawny.",
  "neg-71": "Kwota 1.234.567 zł oraz wersja 10.2.3 z dnia 12.05.1990.",
  "neg-72": "Rozporządzenie (WE) nr 1234/2009 oraz dyrektywa WE 123 obowiązują.",
  "neg-73": "Spotkanie zespołu odbyło się w Gdańsku przy kawie.",
  "neg-74": "Powiat: Pruszkowski, województwo mazowieckie pozostają jawne.",
  "neg-75": "Kwota 50000 Euro oraz faktura 12345 Netto do rozliczenia.",
  "neg-76": "polski rynek pracy zmienia się, a wąski segment rośnie.",
  "neg-77": "mam ochotę na kawę, ala woli herbatę, ola pije wodę.",
  "neg-78": "Pan był wczoraj w urzędzie, a Pani ma rację w tej sprawie.",
  "neg-79": "nazywam się tak, jak trzeba, i nic więcej nie dodam.",
  "neg-80": "USTAWA O OCHRONIE DANYCH OSOBOWYCH obowiązuje wszystkich.",
  "neg-81": "NACZELNY SĄD ADMINISTRACYJNY oddalił skargę kasacyjną.",
  "neg-82": "UNIWERSYTET WARSZAWSKI ogłosił nabór na nowy kierunek.",
  "neg-83": "PREZES ZARZĄDU SPÓŁKI podpisał uchwałę o połączeniu.",
  "neg-84": "SĘDZIA SĄDU REJONOWEGO rozpoznał sprawę na posiedzeniu.",
  "neg-85": "platformach społecznościowych Urzędu Marszałkowskiego Województwa Śląskiego.",
  "neg-86": "Petycję rozpatrzył Urząd Marszałkowski Województwa Śląskiego.",
  "neg-87": "Zdarzenie miało miejsce u zbiegu ulic Tadeusza Kościuszki oraz świadka.",
  "neg-88": "Rondo Romana Dmowskiego było wczoraj zamknięte.",
  "neg-89": "Jadąc aleją Tadeusza Kościuszki minął sygnalizację świetlną.",
  "neg-90": "Sklep mieści się na rogu ul. gen. Władysława Andersa.",
  "neg-91": "Na odcinku od Ronda Dmowskiego wprowadzono objazd.",
  "neg-92": "Pozycja 32 774 91 55 w wykazie inwentarza magazynowego.",
  "neg-93": "Park Narodowy Gór Stołowych 2024 świętuje jubileusz.",
  "neg-94": "Decyzję wydał Starosta Wołomiński osobiście.",
  "neg-95": "Bulwar Filadelfijski 1998 objęty jest programem rewitalizacji nadbrzeży.",
  "os-o-01": "Sprawę [IMIĘ I NAZWISKO] umorzono z braku dowodów.",
  "os-o-02": "Sąd doręczył [IMIĘ I NAZWISKO] odpis wyroku.",
  "os-o-03": "Ugoda zawarta z [IMIĘ I NAZWISKO] obowiązuje od stycznia.",
  "os-o-04": "Pełnomocnik [IMIĘ I NAZWISKO] złożył apelację.",
  "os-o-05": "Wierzyciel wystąpił przeciwko [IMIĘ I NAZWISKO] z pozwem.",
  "os-o-06": "Negocjacje z [IMIĘ I NAZWISKO] zakończyły się ugodą.",
  "os-o-07": "Zeznania [IMIĘ I NAZWISKO] potwierdzili sąsiedzi.",
  "os-o-08": "Komornik zajął wynagrodzenie [IMIĘ I NAZWISKO].",
  "os-o-09": "Grunt należał wcześniej do [IMIĘ I NAZWISKO].",
  "os-o-10": "Wniosek [IMIĘ I NAZWISKO] oddalono w całości.",
  "os-o-11": "[IMIĘ I NAZWISKO] wręczono wypowiedzenie umowy.",
  "os-o-12": "Protokół podpisano razem z [IMIĘ I NAZWISKO].",
  "os-o-13": "Apelacja [IMIĘ I NAZWISKO] okazała się skuteczna.",
  "os-o-14": "Sąd przyznał [IMIĘ I NAZWISKO] zwrot kosztów.",
  "os-o-15": "Obrońca [IMIĘ I NAZWISKO] wniósł o uniewinnienie.",
  "os-o-16": "Zeznania [IMIĘ I NAZWISKO] uznano za wiarygodne.",
  "os-o-17": "Sprawę przeciwko [IMIĘ I NAZWISKO] zawieszono.",
  "os-o-18": "Rozmawiałem z [IMIĘ I NAZWISKO] o warunkach najmu.",
  "os-o-19": "Mieszkanie [IMIĘ I NAZWISKO] zostało wycenione.",
  "os-o-20": "Nieruchomość [IMIĘ I NAZWISKO] objęto hipoteką.",
  "os-o-21": "Spadek po [IMIĘ I NAZWISKO] podzielono na troje dzieci.",
  "os-o-22": "Roszczenia [IMIĘ I NAZWISKO] przedawniły się w maju.",
  "os-o-23": "Pozew [IMIĘ I NAZWISKO] wpłynął we wtorek.",
  "os-o-24": "Sąd wysłuchał [IMIĘ I NAZWISKO] na rozprawie zdalnej.",
  "os-o-25": "Zarzuty postawiono [IMIĘ I NAZWISKO].",
  "os-o-26": "Nagrodę wręczono [IMIĘ I NAZWISKO].",
  "os-o-27": "u [IMIĘ I NAZWISKO] w biurze zostawiłem parasol",
  "os-o-28": "pytałem [IMIĘ I NAZWISKO], ale nie odpisał",
  "os-o-29": "wczoraj widziałem [IMIĘ I NAZWISKO] w urzędzie",
  "os-o-30": "[IMIĘ I NAZWISKO] nikt nie uwierzył.",
  "os-o-31": "Dokumenty od [IMIĘ I NAZWISKO] dotarły pocztą.",
  "os-o-32": "Decyzję wysłano do [IMIĘ I NAZWISKO].",
  "os-o-33": "Na ulicy spotkałem wczoraj [IMIĘ I NAZWISKO].",
  "os-p-01": "Pozwany [IMIĘ I NAZWISKO] nie stawił się na rozprawie.",
  "os-p-02": "Powódka [IMIĘ I NAZWISKO] wniosła o zasądzenie kosztów.",
  "os-p-03": "Świadek [IMIĘ I NAZWISKO] zeznał, że widział zdarzenie.",
  "os-p-04": "Umowę podpisała [IMIĘ I NAZWISKO] w obecności notariusza.",
  "os-p-05": "Wniosek złożył [IMIĘ I NAZWISKO] dnia 12 marca.",
  "os-p-06": "[IMIĘ I NAZWISKO] została powołana do zarządu.",
  "os-p-07": "[IMIĘ I NAZWISKO] prowadzi warsztat przy rynku.",
  "os-p-08": "Na spotkanie przyszedł [IMIĘ I NAZWISKO] z dokumentami.",
  "os-p-09": "[IMIĘ I NAZWISKO] odebrała przesyłkę osobiście.",
  "os-p-10": "hej, pisze do was [IMIĘ I NAZWISKO], mam pytanie o umowę",
  "os-p-11": "imię i nazwisko: [IMIĘ I NAZWISKO]",
  "os-p-12": "od [IMIĘ I NAZWISKO] dostałem pismo",
  "os-p-13": "pełnomocnik: [IMIĘ I NAZWISKO]",
  "os-p-14": "[IMIĘ I NAZWISKO] wygrała sprawę w drugiej instancji.",
  "os-p-15": "[IMIĘ I NAZWISKO] złożyła reklamację w sklepie.",
  "os-p-16": "Nowa księgowa to [IMIĘ I NAZWISKO].",
  "os-p-17": "[IMIĘ I NAZWISKO] i [IMIĘ I NAZWISKO] kupili mieszkanie na osiedlu.",
  "os-p-18": "Państwo [IMIĘ I NAZWISKO] wynajmują lokal od miasta.",
  "os-p-19": "[IMIĘ I NAZWISKO] reprezentuje spółkę.",
  "os-p-20": "Pełnomocnikiem jest [IMIĘ I NAZWISKO].",
  "os-p-21": "Pismo podpisała [IMIĘ I NAZWISKO].",
  "os-p-22": "Nazywam się [IMIĘ I NAZWISKO] i piszę w sprawie faktury.",
  "os-p-23": "Mam na imię [IMIĘ I NAZWISKO], nazwisko [IMIĘ I NAZWISKO].",
  "os-p-24": "Pan [IMIĘ I NAZWISKO] nie odpowiada na wezwania.",
  "os-p-25": "Proszę przekazać dokumenty pani [IMIĘ I NAZWISKO].",
  "os-p-26": "Imię i nazwisko: [IMIĘ I NAZWISKO]",
  "os-p-27": "nazywam się [IMIĘ I NAZWISKO] i czekam na odpowiedź.",
  "os-p-28": "Nazywam się [IMIĘ I NAZWISKO], proszę o kontakt telefoniczny.",
  "os-p-29": "mam na imię [IMIĘ I NAZWISKO] i dzwonię w sprawie faktury.",
  "os-p-30": "Imię: [IMIĘ I NAZWISKO]
Nazwisko: [IMIĘ I NAZWISKO]",
  "os-p-31": "[IMIĘ I NAZWISKO] złożyła wniosek w urzędzie miasta.",
  "os-p-32": "W składzie SSO [IMIĘ I NAZWISKO] wydał wyrok.",
  "os-p-33": "Rozmawiałem z PANEM [IMIĘ I NAZWISKO] osobiście.",
  "os-p-34": "POZWANY [IMIĘ I NAZWISKO] nie stawił się na rozprawie.",
  "os-p-35": "Wezwanie otrzymał PAN [IMIĘ I NAZWISKO] dnia wczorajszego.",
  "os-r-01": "[IMIĘ I NAZWISKO] podpisał protokół odbioru.",
  "os-r-02": "[IMIĘ I NAZWISKO] złożyła wniosek o urlop.",
  "os-r-03": "[IMIĘ I NAZWISKO] wynajął magazyn pod miastem.",
  "os-r-04": "[IMIĘ I NAZWISKO] odebrała nagrodę jubileuszową.",
  "os-r-05": "[IMIĘ I NAZWISKO] przesłał ofertę w terminie.",
  "os-r-06": "[IMIĘ I NAZWISKO] przyszła na przesłuchanie.",
  "os-r-07": "[IMIĘ I NAZWISKO] prowadzi kancelarię w Radomiu.",
  "os-r-08": "Protokół sporządził [IMIĘ I NAZWISKO].",
  "os-r-09": "napisała do mnie [IMIĘ I NAZWISKO] w sprawie zaliczki",
  "os-r-10": "sprawę [IMIĘ I NAZWISKO] przekazano do prokuratury",
  "os-r-11": "list od [IMIĘ I NAZWISKO] leżał na biurku tydzień",
  "os-r-12": "[IMIĘ I NAZWISKO] zależało na szybkiej wypłacie.",
  "os-r-13": "Zaległości [IMIĘ I NAZWISKO] rosły z miesiąca na miesiąc.",
  "os-r-14": "Wniosek [IMIĘ I NAZWISKO] rozpatrzono odmownie.",
  "os-r-15": "Pani [IMIĘ I NAZWISKO] prosi o kontakt po godzinie 15.",
  "os-r-16": "Proszę o pilny telefon do pana [IMIĘ I NAZWISKO].",
  "os-r-17": "Pan [IMIĘ I NAZWISKO] oczekuje w sekretariacie.",
  "os-r-18": "Nazywam się [IMIĘ I NAZWISKO] i proszę o fakturę korygującą.",
  "os-r-19": "[IMIĘ I NAZWISKO] wygrała przetarg na dostawę mebli.",
  "os-r-20": "Opinię przygotowała [IMIĘ I NAZWISKO] z działu prawnego.",
  "os-r-21": "Państwo [IMIĘ I NAZWISKO] odwołali się od decyzji.",
  "os-r-22": "Spór z [IMIĘ I NAZWISKO] trwa od dwóch lat.",
  "os-r-23": "[IMIĘ I NAZWISKO] podpisała aneks.",
  "os-r-24": "opinia [IMIĘ I NAZWISKO] była druzgocąca",
  "os-rn-01": "list od Achtelika leżał tydzień na biurku",
  "os-rn-02": "sprawę Fąfary umorzono w drugiej instancji",
  "os-rn-03": "zeznania Gągały spisano protokolarnie",
  "os-rn-04": "wniosek Grzmota rozpatrzono odmownie",
  "os-rn-05": "do akt dołączono notatkę Ciołka z rozmowy",
  "os-rn-06": "reklamację złożył wczoraj Müller osobiście",
  "os-rn-07": "umowę parafował [IMIĘ I NAZWISKO] dzień wcześniej",
  "os-rn-08": "protokół podpisał Kovač w obecności świadka",
  "os-rn-09": "opinię biegłego sporządził Popescu w terminie",
  "os-rn-10": "pełnomocnikiem powoda był mecenas Schmidt",
  "os-rn-11": "sprawę [IMIĘ I NAZWISKO] odroczono do przyszłego miesiąca",
  "os-rn-12": "zeznania Habaja spisano na komisariacie",
  "os-rn-13": "wniosek [IMIĘ I NAZWISKO] oddalono w pierwszej instancji",
  "os-rn-14": "do akt dołączono notatkę Cieciory z narady",
  "os-rn-15": "pismo od Bździucha wpłynęło z opóźnieniem",
  "os-rn-16": "opinię prawną wydał [IMIĘ I NAZWISKO] zeszłego tygodnia",
  "os-rn-17": "umowę serwisową parafował Horvat osobiście",
  "os-rn-18": "reklamację rozpatrzył Weber w dwa dni",
  "os-rn-19": "kontrakt firmował Rossi przed notariuszem",
  "os-sl-01": "Sprawę [IMIĘ I NAZWISKO] umorzono w drugiej instancji.",
  "os-sl-02": "Zeznania [IMIĘ I NAZWISKO] potwierdzili sąsiedzi.",
  "os-sl-03": "Wniosek [IMIĘ I NAZWISKO] rozpatrzono odmownie.",
  "os-sl-04": "list od [IMIĘ I NAZWISKO] leżał tydzień na biurku",
  "os-sl-05": "pismo od [IMIĘ I NAZWISKO] wpłynęło z opóźnieniem",
  "os-sl-06": "opinię sporządził biegły [IMIĘ I NAZWISKO] w terminie",
  "os-sl-07": "reklamację złożył wczoraj [IMIĘ I NAZWISKO] osobiście",
  "os-sl-08": "umowę serwisową parafował [IMIĘ I NAZWISKO]",
  "os-sl-09": "protokół podpisał mecenas [IMIĘ I NAZWISKO]",
  "os-sl-10": "do akt dołączono zeznania świadka [IMIĘ I NAZWISKO]",
  "os-sl-11": "Zgłosił się wczoraj [IMIĘ I NAZWISKO] osobiście.",
  "os-sl-12": "Reklamację złożyła [IMIĘ I NAZWISKO] w sklepie.",
  "str-01": "PESEL: [PESEL]",
  "str-02": "Mój PESEL to [PESEL], proszę o weryfikację.",
  "str-03": "Wnioskodawca legitymuje się numerem PESEL [PESEL].",
  "str-04": "W formularzu wpisano [PESEL] jako identyfikator.",
  "str-05": "NIP firmy: [NIP].",
  "str-06": "Faktura wystawiona dla NIP [NIP].",
  "str-07": "Kontrahent posługuje się NIP [NIP].",
  "str-08": "Numer identyfikacji podatkowej [NIP] należy do spółki.",
  "str-09": "REGON [REGON] widnieje w rejestrze.",
  "str-10": "Spółka o numerze REGON: [REGON] zawiesiła działalność.",
  "str-11": "[REGON] to REGON jednostki lokalnej.",
  "str-12": "Przelew na rachunek [NR-KONTA] do końca miesiąca.",
  "str-13": "IBAN: [NR-KONTA] (mBank).",
  "str-14": "Numer konta: [NR-KONTA] prowadzony w PKO.",
  "str-15": "Zwrot nastąpi na konto [NR-KONTA] wskazane w umowie.",
  "str-16": "Kontakt: [TELEFON] po godzinie 17.",
  "str-17": "Zadzwoń pod [TELEFON] wieczorem.",
  "str-18": "Numer telefonu [TELEFON] jest nieaktualny.",
  "str-19": "sms na [TELEFON] nie doszedł",
  "str-20": "Infolinia oddzwoni z [TELEFON].",
  "str-21": "Proszę o odpowiedź na [EMAIL] w tym tygodniu.",
  "str-22": "Zgłoszenia przyjmujemy pod adresem [EMAIL].",
  "str-23": "e-mail: [EMAIL] (służbowy)",
  "str-24": "Adres do doręczeń: [KOD-POCZTOWY] [MIEJSCOWOŚĆ], skrytka 21.",
  "str-25": "Przesyłkę nadano z kodu [KOD-POCZTOWY].",
  "str-26": "Zamieszkały przy [ADRES] w [MIEJSCOWOŚĆ].",
  "str-27": "Biuro mieści się przy [ADRES].",
  "str-28": "Nowy lokal: [ADRES], obok szkoły.",
  "str-29": "Spotkanie odbędzie się na [ADRES].",
  "str-30": "Mieszkam na [ADRES].",
  "str-31": "[ADRES] to adres korespondencyjny.",
  "str-32": "Wnioskodawca, ur. [DATA-URODZENIA], zamieszkały w [MIEJSCOWOŚĆ].",
  "str-33": "Urodzona [DATA-URODZENIA] w [MIEJSCOWOŚĆ].",
  "str-34": "Data urodzenia: [DATA-URODZENIA] (wg aktu).",
  "str-35": "urodzony [DATA-URODZENIA] w [MIEJSCOWOŚĆ]",
  "str-36": "Seria i numer dowodu: [NR-DOWODU].",
  "str-37": "Legitymuje się dowodem [NR-DOWODU].",
  "str-38": "Dłużnik (PESEL [PESEL]) zamieszkały przy [ADRES], tel. [TELEFON].",
  "str-39": "Nadawca [IMIĘ I NAZWISKO], konto [NR-KONTA], e-mail [EMAIL].",
  "str-40": "Klientka [IMIĘ I NAZWISKO] (PESEL [PESEL], tel. [TELEFON]) prosi o kontakt.",
  "str-41": "Sygn. akt [ZNAK-SPRAWY] — uchwała siedmiu sędziów.",
  "str-42": "W formularzu wpisano REGON [REGON] z błędem.",
  "str-43": "Podano rachunek [NR-KONTA] (błędna suma).",
  "str-44": "Token: [TOKEN]",
  "str-45": "Adres IP serwera: [IP] w sieci lokalnej.",
  "str-46": "IPv6: [IP] przydzielony automatycznie.",
  "str-47": "MAC karty sieciowej [MAC] jest unikalny.",
  "str-48": "Numer VIN [VIN] widnieje w dowodzie rejestracyjnym.",
  "str-49": "Prawo jazdy nr [PRAWO-JAZDY] wydane w 2020 roku.",
  "str-50": "Prawo jazdy: [PRAWO-JAZDY] (kat. B).",
  "str-51": "Pojazd o nr rejestracyjnym [NR-REJESTRACYJNY], marka Audi.",
  "str-52": "Klucz API [TOKEN] w konfiguracji.",
  "str-53": "Sekret [TOKEN] w repozytorium.",
  "str-54": "Telefon kontaktowy [TELEFON] czynny do 16.",
  "str-55": "Telefon [TELEFON] zapisano w aktach.",
  "str-56": "Interfejs o adresie [MAC] w notacji Cisco.",
  "str-57": "Sygn. akt: [ZNAK-SPRAWY] w postępowaniu.",
  "str-58": "Spółka wpisana do KRS pod numerem [KRS].",
  "str-59": "Legitymował się prawem jazdy nr [PRAWO-JAZDY] podczas kontroli.",
  "str-60": "Zamieszkały przy [ADRES] od urodzenia.",
  "str-61": "Świadek, ur. dnia [DATA-URODZENIA], stawił się z opiekunem.",
  "str-62": "Motocykl [NR-REJESTRACYJNY] zabezpieczono na parkingu.",
  "str-63": "Drugi pojazd [NR-REJESTRACYJNY] odholowano.",
  "str-64": "Przelew na [NR-KONTA] zaksięgowano.",
  "str-65": "Zeznania złożył [IMIĘ I NAZWISKO] do protokołu.",
  "str-66": "Stawił się [IMIĘ I NAZWISKO] z tłumaczem.",
  "str-67": "Ciągnik siodłowy [NR-REJESTRACYJNY] zatrzymano do kontroli.",
  "str-68": "Do wiadomości: [IMIĘ I NAZWISKO], referat pierwszy.",
  "str-69": "<Customer><Name>[IMIĘ I NAZWISKO]</Name><Surname>[IMIĘ I NAZWISKO]</Surname><City>[MIEJSCOWOŚĆ]</City><Street>[ADRES]</Street></Customer>",
  "str-70": "{ "firstName": "[IMIĘ I NAZWISKO]", "lastName": "[IMIĘ I NAZWISKO]", "city": "[MIEJSCOWOŚĆ]", "street": "[ADRES]" }",
  "str-71": "Zgłoszenie https://portal.example.com/ticket?id=987001234&user=[LOGIN] w kolejce.",
  "str-72": "Login użytkownika: [LOGIN] (konto domenowe).",
  "str-73": "Kontakt: [TELEFON], [TELEFON] oraz stacjonarny [TELEFON].",
  "str-74": "Zabezpieczono pojazdy: [NR-REJESTRACYJNY], [NR-REJESTRACYJNY], [NR-REJESTRACYJNY] oraz [NR-REJESTRACYJNY].",
  "str-75": "Zgłosił się [IMIĘ I NAZWISKO], zamieszkały [ADRES].",
  "str-76": "Biuro przy [ADRES] w [MIEJSCOWOŚĆ] czynne od 8:00.",
  "str-77": "Załącznik: Umowa_Kredytowa_[IMIĘ I NAZWISKO].pdf w aktach.",
  "str-78": "Zgłosił się [IMIĘ I NAZWISKO] po odbiór dokumentów.",
  "str-79": "Adres korespondencyjny: [ADRES], [KOD-POCZTOWY] [MIEJSCOWOŚĆ].",
  "str-80": "Kontakt: [EMAIL] w sprawie umowy.",
  "str-81": "Petycję podpisał [IMIĘ I NAZWISKO], przewodniczący stowarzyszenia.",
  "str-82": "Adres do doręczeń: [ADRES] w budynku.",
  "str-83": "W rejestrze figuruje [MIEJSCOWOŚĆ] (miasto) jako jednostka.",
  "str-84": "Kontakt telefoniczny pod numerem [TELEFON] w godzinach pracy.",
  "str-85": "Wnioskodawca podał PESEL to [PESEL] w formularzu.",
  "str-86": "Adres zamieszkania: [ADRES] w bloku.",
  "str-87": "Na rachunek wspólnoty [NR-KONTA] wpłynęły zaliczki.",
}
`;

exports[`golden: zbiór adwersarialny — pseudonimizacja 1`] = `
{
  "adres-pelny": "Zamieszkały przy [ADRES], [KOD-POCZTOWY] [MIEJSCOWOŚĆ].",
  "allcaps-instytucje-keep": "SĄD OKRĘGOWY W WARSZAWIE oraz UNIWERSYTET WARSZAWSKI, WOJEWODA MAZOWIECKI.",
  "allcaps-pan-surname": "Wezwanie otrzymał PAN [OSOBA-A] dnia wczorajszego.",
  "allcaps-panem": "Rozmawiałem z PANEM [OSOBA-A] w tej sprawie.",
  "allcaps-rola": "POZWANY [OSOBA-A] oraz ŚWIADEK [OSOBA-B] stawili się.",
  "allcaps-sso": "W składzie: przewodniczący SSO [OSOBA-A] wydał wyrok.",
  "casing-form-lower": "Imię: [IMIĘ I NAZWISKO]
Nazwisko: [IMIĘ I NAZWISKO]
Oddział: kardiologia",
  "casing-homonim-lower": "to jest jagoda, a obok rośnie kalina i róża pnąca.",
  "casing-imie-caps": "mam na imię [OSOBA-A] i dzwonię w sprawie faktury.",
  "casing-json-lower": "{"firstName":"[IMIĘ I NAZWISKO]","lastName":"[OSOBA-A]"}",
  "casing-naglowek-caps": "USTAWA O OCHRONIE DANYCH OSOBOWYCH — SĄD OKRĘGOWY W WARSZAWIE.",
  "casing-pair-caps": "[OSOBA-A] złożyła wniosek w urzędzie miasta.",
  "casing-pair-lower": "pisała do nas [OSOBA-A] w sprawie zwrotu nadpłaty.",
  "casing-pan-czasownik": "Pan był wczoraj w urzędzie, a Pani ma rację w tej sprawie.",
  "casing-self-caps": "Nazywam się [OSOBA-A], proszę o kontakt.",
  "casing-self-lower": "nazywam się [OSOBA-A], mam pytanie do urzędu.",
  "casing-self-mixed": "Dzień dobry, nazywam się [OSOBA-A] i piszę w sprawie umowy.",
  "casing-self-nie-nazwa": "nazywam się tak, jak trzeba, i nic więcej nie dodam.",
  "data-urodzenia": "Ur. [DATA-URODZENIA] r. w [MIEJSCOWOŚĆ], obecnie emeryt.",
  "dowod-walidacja": "Dowód osobisty [NR-DOWODU] oraz kwota PLN 300000 do wypłaty.",
  "email-diakrytyka": "Adres: [EMAIL] w nagłówku wiadomości.",
  "iban-i-konto": "Nr konta do zwrotu: [NR-KONTA], rachunek bankowy.",
  "karta-amex": "Karta Amex [NR-KARTY] na fakturze.",
  "karta-mastercard": "Płatność kartą [NR-KARTY] zaksięgowana.",
  "karta-po-art": "Zgodnie z art. 4111 1111 1111 1111 (odwołanie, nie karta).",
  "karta-visa": "Do zwrotu na kartę [NR-KARTY], dziękuję.",
  "krs-literal": "Spółka wpisana do KRS [KRS] w rejestrze przedsiębiorców.",
  "legal-ref-nie-telefon": "Zgodnie z art. 123 456 789 Kodeksu cywilnego oraz § 12 ust. 3.",
  "lowercase-run": "od [OSOBA-A] dostałem pismo, z [OSOBA-B] rozmawiałem wczoraj.",
  "miasto-przed-adresem": "[MIEJSCOWOŚĆ], [ADRES] — siedziba spółki.",
  "miasto-wielowyraz-kod": "Adres: [KOD-POCZTOWY] [MIEJSCOWOŚĆ], [ADRES].",
  "miasto-zielona-gora": "Mieszka w [KOD-POCZTOWY] [MIEJSCOWOŚĆ] przy [ADRES].",
  "nie-karta-16cyfr": "Zamówienie nr 1111222233334444 w systemie (to nie karta).",
  "nip-etykieta": "NIP: [NIP] oraz drugi NIP [NIP] w piśmie.",
  "nip-zla-suma": "Numer 1234567891 nie jest poprawnym NIP-em (zła suma).",
  "para-osoba": "Sprawę prowadzi pan [OSOBA-A] wraz z radcą [OSOBA-B].",
  "pesel-etykieta-nowa-linia": "Dane pacjenta
PESEL:
[PESEL]
Oddział: kardiologia",
  "pseudonim-powtorzenie": "[OSOBA-A] i [OSOBA-A]. [OSOBA-A] złożył wniosek, [OSOBA-A] podpisała.",
  "regon-etykieta": "REGON [REGON] oraz REGON: 00000000 w nagłówku.",
  "sygnatura-akt": "Sygn. akt [ZNAK-SPRAWY] rozpoznano na rozprawie.",
  "telefon-plus48": "Kontakt telefoniczny: [TELEFON] lub [TELEFON].",
  "url-ochrona": "Zobacz https://example.com/user?name=[IMIĘ I NAZWISKO]&email=[EMAIL] w systemie.",
  "vin-mac-ip": "VIN: [VIN], MAC [MAC], IP 192.168.1.1.",
  "xml-json-klucze": "{"firstName":"[IMIĘ I NAZWISKO]","lastName":"[OSOBA-A]","pesel":"[PESEL]"}",
}
`;

exports[`golden: zbiór adwersarialny — wariant domyślny 1`] = `
{
  "adres-pelny": "Zamieszkały przy [ADRES], [KOD-POCZTOWY] [MIEJSCOWOŚĆ].",
  "allcaps-instytucje-keep": "SĄD OKRĘGOWY W WARSZAWIE oraz UNIWERSYTET WARSZAWSKI, WOJEWODA MAZOWIECKI.",
  "allcaps-pan-surname": "Wezwanie otrzymał PAN [IMIĘ I NAZWISKO] dnia wczorajszego.",
  "allcaps-panem": "Rozmawiałem z PANEM [IMIĘ I NAZWISKO] w tej sprawie.",
  "allcaps-rola": "POZWANY [IMIĘ I NAZWISKO] oraz ŚWIADEK [IMIĘ I NAZWISKO] stawili się.",
  "allcaps-sso": "W składzie: przewodniczący SSO [IMIĘ I NAZWISKO] wydał wyrok.",
  "casing-form-lower": "Imię: [IMIĘ I NAZWISKO]
Nazwisko: [IMIĘ I NAZWISKO]
Oddział: kardiologia",
  "casing-homonim-lower": "to jest jagoda, a obok rośnie kalina i róża pnąca.",
  "casing-imie-caps": "mam na imię [IMIĘ I NAZWISKO] i dzwonię w sprawie faktury.",
  "casing-json-lower": "{"firstName":"[IMIĘ I NAZWISKO]","lastName":"[IMIĘ I NAZWISKO]"}",
  "casing-naglowek-caps": "USTAWA O OCHRONIE DANYCH OSOBOWYCH — SĄD OKRĘGOWY W WARSZAWIE.",
  "casing-pair-caps": "[IMIĘ I NAZWISKO] złożyła wniosek w urzędzie miasta.",
  "casing-pair-lower": "pisała do nas [IMIĘ I NAZWISKO] w sprawie zwrotu nadpłaty.",
  "casing-pan-czasownik": "Pan był wczoraj w urzędzie, a Pani ma rację w tej sprawie.",
  "casing-self-caps": "Nazywam się [IMIĘ I NAZWISKO], proszę o kontakt.",
  "casing-self-lower": "nazywam się [IMIĘ I NAZWISKO], mam pytanie do urzędu.",
  "casing-self-mixed": "Dzień dobry, nazywam się [IMIĘ I NAZWISKO] i piszę w sprawie umowy.",
  "casing-self-nie-nazwa": "nazywam się tak, jak trzeba, i nic więcej nie dodam.",
  "data-urodzenia": "Ur. [DATA-URODZENIA] r. w [MIEJSCOWOŚĆ], obecnie emeryt.",
  "dowod-walidacja": "Dowód osobisty [NR-DOWODU] oraz kwota PLN 300000 do wypłaty.",
  "email-diakrytyka": "Adres: [EMAIL] w nagłówku wiadomości.",
  "iban-i-konto": "Nr konta do zwrotu: [NR-KONTA], rachunek bankowy.",
  "karta-amex": "Karta Amex [NR-KARTY] na fakturze.",
  "karta-mastercard": "Płatność kartą [NR-KARTY] zaksięgowana.",
  "karta-po-art": "Zgodnie z art. 4111 1111 1111 1111 (odwołanie, nie karta).",
  "karta-visa": "Do zwrotu na kartę [NR-KARTY], dziękuję.",
  "krs-literal": "Spółka wpisana do KRS [KRS] w rejestrze przedsiębiorców.",
  "legal-ref-nie-telefon": "Zgodnie z art. 123 456 789 Kodeksu cywilnego oraz § 12 ust. 3.",
  "lowercase-run": "od [IMIĘ I NAZWISKO] dostałem pismo, z [IMIĘ I NAZWISKO] rozmawiałem wczoraj.",
  "miasto-przed-adresem": "[MIEJSCOWOŚĆ], [ADRES] — siedziba spółki.",
  "miasto-wielowyraz-kod": "Adres: [KOD-POCZTOWY] [MIEJSCOWOŚĆ], [ADRES].",
  "miasto-zielona-gora": "Mieszka w [KOD-POCZTOWY] [MIEJSCOWOŚĆ] przy [ADRES].",
  "nie-karta-16cyfr": "Zamówienie nr 1111222233334444 w systemie (to nie karta).",
  "nip-etykieta": "NIP: [NIP] oraz drugi NIP [NIP] w piśmie.",
  "nip-zla-suma": "Numer 1234567891 nie jest poprawnym NIP-em (zła suma).",
  "para-osoba": "Sprawę prowadzi pan [IMIĘ I NAZWISKO] wraz z radcą [IMIĘ I NAZWISKO].",
  "pesel-etykieta-nowa-linia": "Dane pacjenta
PESEL:
[PESEL]
Oddział: kardiologia",
  "pseudonim-powtorzenie": "[IMIĘ I NAZWISKO] i [IMIĘ I NAZWISKO]. [IMIĘ I NAZWISKO] złożył wniosek, [IMIĘ I NAZWISKO] podpisała.",
  "regon-etykieta": "REGON [REGON] oraz REGON: 00000000 w nagłówku.",
  "sygnatura-akt": "Sygn. akt [ZNAK-SPRAWY] rozpoznano na rozprawie.",
  "telefon-plus48": "Kontakt telefoniczny: [TELEFON] lub [TELEFON].",
  "url-ochrona": "Zobacz https://example.com/user?name=[IMIĘ I NAZWISKO]&email=[EMAIL] w systemie.",
  "vin-mac-ip": "VIN: [VIN], MAC [MAC], IP 192.168.1.1.",
  "xml-json-klucze": "{"firstName":"[IMIĘ I NAZWISKO]","lastName":"[IMIĘ I NAZWISKO]","pesel":"[PESEL]"}",
}
`;
